--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,7 +1,8 @@
-@media only screen (min-width: 0px) and (max-width: 768px){
+@media only screen and (min-width: 0px) and (max-width: 768px){
 	.gridContainer{
 		display: grid;
-		grid-template-areas: "header"
+		grid-template-areas: 
+		"header"
 		"main"
 		"footer";
 		grid-template-columns: 100%;
@@ -18,6 +19,43 @@
 	footer{
 		grid-area: footer;
 		background-color: lightyellow;
+		display: flex;
+		justify-content: space-around;
+	}
+	a{
+		text-decoration: none;
+	}
+	li{
+		list-style: none;
+	}
+	ul{
+		display: flex;
+		width: 100%;
+		justify-content: flex-end;
+	}
+}
+
+@media only screen and (min-width: 1023px){
+		.gridContainer{
+		display: grid;
+		grid-template-areas: 
+		"header"
+		"main"
+		"footer";
+		grid-template-columns: 100%;
+		grid-template-rows: 100px 500px 200px;
+	}
+	header{
+		grid-area: header;
+		background-color: red;
+	}
+	main{
+		grid-area: main;
+		background-color: blue;
+	}
+	footer{
+		grid-area: footer;
+		background-color: yellow;
 		display: flex;
 		justify-content: space-around;
 	}
