--- a/css/estilo.css
+++ b/css/estilo.css
@@ -39,7 +39,7 @@
 	}
 }
 
-/*@media only screen and (min-width: 1023px){
+@media only screen and (min-width: 1023px){
 		.gridContainer{
 		display: grid;
 		grid-template-areas: 
@@ -77,4 +77,4 @@
 		display: flex;
 		justify-content: flex-end;
 	}
-}*/
+}
